src/objects/Opportunity.object
<CustomObject>
    <businessProcesses>
        <fullName>NXP Indirect Sales Process</fullName>
        <description>NXP Indirect Sales Process</description>
        <isActive>true</isActive>
        <values>
            <fullName>Cancelled</fullName>
        </values>
        <values>
            <fullName>Commitment</fullName>
        </values>
        <values>
            <fullName>Discovery</fullName>
        </values>
        <values>
            <fullName>Initial Engagement</fullName>
        </values>
        <values>
            <fullName>Lost</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>NXP Sales Process</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Cancelled</fullName>
        </values>
        <values>
            <fullName>Commitment</fullName>
        </values>
        <values>
            <fullName>Decision</fullName>
        </values>
        <values>
            <fullName>Discovery</fullName>
        </values>
        <values>
            <fullName>Initial Engagement</fullName>
        </values>
        <values>
            <fullName>Lost</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>AOP_value_BU__c</fullName>
        <label>AOP Value - BU</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AOP_value__c</fullName>
        <label>AOP Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APN_Rate__c</fullName>
        <description>Field specific to STAR Account - SIR1174</description>
        <label>DISC - APN %</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>APN_assigned__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Discovery Milestone</description>
        <label>DISC - APN Assigned</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASSE_Qual_plan_requested_by__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Field specific to STAR Account - SIR1174</description>
        <label>ASSE - Qual Plan Requested By</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.AccountId</field>
                <operation>equals</operation>
                <valueField>$Source.AccountId</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunities (ASSE - Qual plan requested by)</relationshipLabel>
        <relationshipName>ASSE_STAR_Contact</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account_Industry_Segment__c</fullName>
        <formula>TEXT(Account.Industry_Segment__c)</formula>
        <label>Account CBG</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Name__c</fullName>
        <formula>Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Region_TEXT__c</fullName>
        <description>[DO NOT REMOVE] Added for Role Hierarchy 2.0
Populated by Workflow, for Opportunity Sharing Rule purpose, because cross-object formula field cannot be used as sharing rules criteria.</description>
        <label>SYSTEM USED - Account Region </label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Region__c</fullName>
        <formula>TEXT(Account.Region__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Active_Account__c</fullName>
        <formula>IF( 
Account.IsInactive__c = false, 
IMAGE (&quot;/img/samples/flag_green.gif&quot;, &quot;GO&quot;) , 
IMAGE (&quot;/img/samples/flag_red.gif&quot;, &quot;STOP&quot;) 
)</formula>
        <inlineHelpText>Account of Opportunity should be an active account before DW submission.</inlineHelpText>
        <label>Active Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Application__c</fullName>
        <label>Application</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Sub_Segment__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>AC DC Motor Drive</fullName>
                </value>
                <value>
                    <fullName>HMI</fullName>
                </value>
                <value>
                    <fullName>Industrial PC</fullName>
                </value>
                <value>
                    <fullName>Industrial Control</fullName>
                </value>
                <value>
                    <fullName>Ruggedized Network</fullName>
                </value>
                <value>
                    <fullName>Bulk Machinery</fullName>
                </value>
                <value>
                    <fullName>Robotics</fullName>
                </value>
                <value>
                    <fullName>Lighting</fullName>
                </value>
                <value>
                    <fullName>HVAC</fullName>
                </value>
                <value>
                    <fullName>Building Sensors and Safety</fullName>
                </value>
                <value>
                    <fullName>Access Control</fullName>
                </value>
                <value>
                    <fullName>Security Surveillance and Alarm</fullName>
                </value>
                <value>
                    <fullName>ATE</fullName>
                </value>
                <value>
                    <fullName>General purpose T&amp;M</fullName>
                </value>
                <value>
                    <fullName>Application Specific T&amp;M</fullName>
                </value>
                <value>
                    <fullName>Diagnostic, Patient Monitoring</fullName>
                </value>
                <value>
                    <fullName>Consumer medical</fullName>
                </value>
                <value>
                    <fullName>Medical imaging</fullName>
                </value>
                <value>
                    <fullName>Power Grid</fullName>
                </value>
                <value>
                    <fullName>Power Generation</fullName>
                </value>
                <value>
                    <fullName>Concentrator</fullName>
                </value>
                <value>
                    <fullName>Gas Meter</fullName>
                </value>
                <value>
                    <fullName>Water/Flow Meter</fullName>
                </value>
                <value>
                    <fullName>Electricity Meter</fullName>
                </value>
                <value>
                    <fullName>UPS/Inverters</fullName>
                </value>
                <value>
                    <fullName>Drones/UAV</fullName>
                </value>
                <value>
                    <fullName>Avionics</fullName>
                </value>
                <value>
                    <fullName>Missiles and Munitions</fullName>
                </value>
                <value>
                    <fullName>Satellites</fullName>
                </value>
                <value>
                    <fullName>Homeland Security</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Asse_Comm_Prob__c</fullName>
        <formula>Account.Parent.PROBABILITY_Assessment__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Stores the probability of an opportuntiy reaching the Commitment stage for this parent account. Is applies to all opportunties upon creation or change of stage. Calculated yearly based on 2 years history.</inlineHelpText>
        <label>Asse Comm Probability</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Assembly__c</fullName>
        <description>This field contains the Name of the ASSEMBLY_OID from Model N.</description>
        <label>Assembly</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Automakers__c</fullName>
        <label>Automaker</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Sub_Segment__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>AUDI</fullName>
                </value>
                <value>
                    <fullName>Bajaj</fullName>
                </value>
                <value>
                    <fullName>BMW</fullName>
                </value>
                <value>
                    <fullName>CHERY</fullName>
                </value>
                <value>
                    <fullName>CHRYSLER</fullName>
                </value>
                <value>
                    <fullName>DAF</fullName>
                </value>
                <value>
                    <fullName>DAIHATSU</fullName>
                </value>
                <value>
                    <fullName>DAIMLER</fullName>
                </value>
                <value>
                    <fullName>FAW</fullName>
                </value>
                <value>
                    <fullName>FIAT</fullName>
                </value>
                <value>
                    <fullName>FORD</fullName>
                </value>
                <value>
                    <fullName>Geely</fullName>
                </value>
                <value>
                    <fullName>GM</fullName>
                </value>
                <value>
                    <fullName>Harley Davidson</fullName>
                </value>
                <value>
                    <fullName>HERO Motors</fullName>
                </value>
                <value>
                    <fullName>Hino</fullName>
                </value>
                <value>
                    <fullName>HONDA</fullName>
                </value>
                <value>
                    <fullName>HYUNDAI</fullName>
                </value>
                <value>
                    <fullName>Isuzu</fullName>
                </value>
                <value>
                    <fullName>IVECO</fullName>
                </value>
                <value>
                    <fullName>JAC</fullName>
                </value>
                <value>
                    <fullName>JLR</fullName>
                </value>
                <value>
                    <fullName>MAHINDRA</fullName>
                </value>
                <value>
                    <fullName>MAN</fullName>
                </value>
                <value>
                    <fullName>MARUTI SUZUKI</fullName>
                </value>
                <value>
                    <fullName>MAZDA</fullName>
                </value>
                <value>
                    <fullName>MITSUBISHI MOTOR</fullName>
                </value>
                <value>
                    <fullName>NISSAN</fullName>
                </value>
                <value>
                    <fullName>OPEL</fullName>
                </value>
                <value>
                    <fullName>PSA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Automotive_Segment_Mismatch__c</fullName>
        <description>This field is part of Opportunity/Opportunity Product fields phase-1 deletion. But unable to delete this fields as we are unable to delete the inactive approval processes in which this field is referenced as data is associated with them. So just renaming the field label to obsolete this field.</description>
        <formula>IF(
  OR(
    ISPICKVAL(
      Industry_Segment__c , 
      &quot;Automotive &amp; Transportation&quot; 
    ) ,
    ISPICKVAL(
      Account.Parent.Industry_Segment__c , 
      &quot;Automotive &amp; Transportation&quot; 
    )
  ) ,
  IF( 
    AND(
      Parent_Account_Segment_Approval__c ,
      ISPICKVAL(
        Industry_Segment__c , 
        &quot;Automotive &amp; Transportation&quot; 
      ) 
    ) ,
    0 ,
    1 
  ) ,
  0
)</formula>
        <inlineHelpText>When Parent Account Industry Segment is Automotive but Opportunity Segment is not</inlineHelpText>
        <label>z_OBSOLETED_Automotive Segment Mismatch</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BL_Approver_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is created to populate Bl approver</description>
        <label>BL Approver 1</label>
        <referenceTo>User</referenceTo>
        <relationshipName>OpportunitiesSGaS</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BL_Approver_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is created to populate BL Approvers</description>
        <label>BL Approver 2</label>
        <referenceTo>User</referenceTo>
        <relationshipName>OpportunitiesSGac</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BL_Approver_3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is created to populate BL Approvers</description>
        <label>BL Approver 3</label>
        <referenceTo>User</referenceTo>
        <relationshipName>OpportunitiesSGaT</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BL_DRI_New__c</fullName>
        <description>Field specific to STAR Account - SIR1174
Field changed from Lookup to Free Text - SFDC52 Rel1612</description>
        <label>BL DRI</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BL__c</fullName>
        <label>BL Concat</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BU_Description__c</fullName>
        <formula>Case( BU__c, &quot;510&quot;,&quot;Security &amp; Connectivity&quot;, &quot;525&quot;,&quot;Automotive&quot;, &quot;541&quot;, &quot;THIRD PARTY WAFERS&quot;, &quot;52N&quot;, &quot;Networking&quot;, &quot;52R&quot;, &quot;RF Power&quot;, &quot;51P&quot;, &quot;Standard Products FSL&quot;,NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BU Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BU_Short_Name__c</fullName>
        <description>1511 Release - SIR 482. Translate BU Description for active BUs.</description>
        <formula>SUBSTITUTE(
SUBSTITUTE(
SUBSTITUTE(
SUBSTITUTE(
SUBSTITUTE(
SUBSTITUTE(
BU__c,
&quot;510&quot;, &quot;SnC&quot;
),

&quot;52R&quot;, &quot;RF&quot;
),
&quot;525&quot;, &quot;AUT&quot;
),
&quot;541&quot;, &quot;THIRD PARTY WAFERS&quot;
),
&quot;52N&quot;, &quot;NET&quot;
),
&quot;51P&quot;, &quot;SP&quot;
)</formula>
        <label>BU Short Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BU__c</fullName>
        <label>BU Concat</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Block_Diagram_Close_Date__c</fullName>
        <description>Rel 1701 SFDC-188 Block Diagram Date</description>
        <label>z_OBSOLETED_Block Diagram Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Business_Created_Date__c</fullName>
        <description>The date when the Model N opportunity is created in the Model N System.</description>
        <label>Business Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Bypass_Validation__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Bypass validation rules to allow Opportunity Program field to be editable all the time.</description>
        <label>Bypass Validation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Channel__c</fullName>
        <label>Channel</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Board Pilot</fullName>
                </value>
                <value>
                    <fullName>Direct</fullName>
                </value>
                <value>
                    <fullName>Disti</fullName>
                </value>
                <value>
                    <fullName>EMS</fullName>
                </value>
                <value>
                    <fullName>ODM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Check_Approvers_ARIA__c</fullName>
        <description>Check if the Product Marketing Manager has signed ARIA</description>
        <formula>AND(
Account.Parent.Name = &apos;STAR&apos;,
OR(
AND(
NOT(ISNULL(BL_Approver_1__c)),
NOT(BL_Approver_1__r.Signed_ARIA__c)
),
AND(
NOT(ISNULL(BL_Approver_2__c)),
NOT(BL_Approver_2__r.Signed_ARIA__c)
),
AND(
NOT(ISNULL(BL_Approver_3__c)),
NOT(BL_Approver_3__r.Signed_ARIA__c)
),
AND(
NOT(ISNULL(BL_Approver_4__c)),
NOT(BL_Approver_4__r.Signed_ARIA__c)
),
AND(
NOT(ISNULL(BL_Approver_5__c)),
NOT(BL_Approver_5__r.Signed_ARIA__c)
)
)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Check Approvers ARIA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Claim_Value_USD_SYS__c</fullName>
        <description>This field is updated by Process Builder to capture the historical trending of Opportunity.Claim_Value_USD__c.</description>
        <label>Oppty Claim Value (USD) - Audit Trail</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Claim_Value_USD__c</fullName>
        <description>Opportunity claim value in USD.</description>
        <formula>IF (Locked_Exchange_Rate__c &lt;&gt; 0, Claim_Value__c / ROUND(Locked_Exchange_Rate__c, 6), 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Summary of all products&apos; [Prod Claim Value] converted to USD.</inlineHelpText>
        <label>Oppty Claim Value (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Claim_Value__c</fullName>
        <description>Opportunity claim value in opportunity currency.</description>
        <inlineHelpText>Summary of all products&apos; [Prod Claim Value] in opportunity currency. 
Lost/Cancelled products are excluded from this calculation.</inlineHelpText>
        <label>Oppty Claim Value</label>
        <summarizedField>OpportunityLineItem.Claim_Value__c</summarizedField>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Competitors__c</fullName>
        <description>SIR958. Converting text field to Picklist and sync Competitor values at Opportunity Line Item</description>
        <label>Competitor</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ALLWINNER TECHNOLOGY</fullName>
                </value>
                <value>
                    <fullName>ALPHA &amp; OMEGA SEMICONDUCTOR</fullName>
                </value>
                <value>
                    <fullName>AMAZING MICROELECTRONIC</fullName>
                </value>
                <value>
                    <fullName>AMPLEON </fullName>
                </value>
                <value>
                    <fullName>ANALOG DEVICES </fullName>
                </value>
                <value>
                    <fullName>APPLIED MICRO CIRCUITS </fullName>
                </value>
                <value>
                    <fullName>AVAGO TECHNOLOGIES </fullName>
                </value>
                <value>
                    <fullName>BOSCH GMBH </fullName>
                </value>
                <value>
                    <fullName>Cambridge Silicon Radio</fullName>
                </value>
                <value>
                    <fullName>CAVIUM</fullName>
                </value>
                <value>
                    <fullName>CIRRUS LOGIC </fullName>
                </value>
                <value>
                    <fullName>CYPRESS SEMICONDUCTOR </fullName>
                </value>
                <value>
                    <fullName>DIALOG SEMICONDUCTOR </fullName>
                </value>
                <value>
                    <fullName>DIODES</fullName>
                </value>
                <value>
                    <fullName>EZCHIP SEMICONDUCTOR </fullName>
                </value>
                <value>
                    <fullName>FLIR SYSTEMS </fullName>
                </value>
                <value>
                    <fullName>FUJITSU</fullName>
                </value>
                <value>
                    <fullName>HONEYWELL INTERNATIONAL </fullName>
                </value>
                <value>
                    <fullName>INFINEON TECHNOLOGIES </fullName>
                </value>
                <value>
                    <fullName>INTEL </fullName>
                </value>
                <value>
                    <fullName>INTERNATIONAL RECTIFIER</fullName>
                </value>
                <value>
                    <fullName>INVENSENSE </fullName>
                </value>
                <value>
                    <fullName>LINEAR TECHNOLOGY </fullName>
                </value>
                <value>
                    <fullName>LITTELFUSE</fullName>
                </value>
                <value>
                    <fullName>LRC</fullName>
                </value>
                <value>
                    <fullName>MACOM </fullName>
                </value>
                <value>
                    <fullName>MARVELL TECHNOLOGY GROUP </fullName>
                </value>
                <value>
                    <fullName>MAXIM INTEGRATED PRODUCTS </fullName>
                </value>
                <value>
                    <fullName>MEDIATEK</fullName>
                </value>
                <value>
                    <fullName>MELEXIS </fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Compliance_Assessment_Evidence_Check_Box__c</fullName>
        <description>1602 Release - SIR 590: 	Oppty Mgmt - Compliance Risk Line Item</description>
        <formula>IF( 
 OR(
 Compliance_Assessment_Evidence__c &amp;&amp; NOT( ISPICKVAL( Compliance_Risk__c , &quot;Not Applicable&quot;)) ,
 NOT( Compliance_Assessment_Evidence__c ) &amp;&amp; ISPICKVAL( Compliance_Risk__c , &quot;Not Applicable&quot;)
 ),
 IMAGE (&quot;/img/samples/flag_green.gif&quot;, &quot;GO&quot;) , 
 IMAGE (&quot;/img/samples/flag_red.gif&quot;, &quot;STOP&quot;)
)</formula>
        <inlineHelpText>Please upload Compliance Evidence and check Compliance Assessment Evidence before submit DW.
If Compliance Risk is not applicable, please uncheck Compliance Assessment Evidence.</inlineHelpText>
        <label>Compliance Asse Evidence Check</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Compliance_Assessment_Evidence__c</fullName>
        <defaultValue>false</defaultValue>
        <description>1602 Release - SIR 590: Oppty Mgmt - Compliance Risk Line Item</description>
        <inlineHelpText>The outcome of a compliance risk assessment is an evidence report that documents the identified risks and associated risk level of the project (high/medium/low). It includes who performed the assessment and date of assessment.</inlineHelpText>
        <label>Compliance Assessment Evidence</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Compliance_Risk__c</fullName>
        <description>1602 Release - SIR 590: Oppty Mgmt - Compliance Risk Line Item</description>
        <inlineHelpText>The risk associated with non-compliance to NXP Code of Conduct and international rules and regulations regarding anti-bribery and competition laws.</inlineHelpText>
        <label>Compliance Risk</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Confidence_Meter__c</fullName>
        <inlineHelpText>Rate your confidence from +3 tp -3 with regard to winning this deal</inlineHelpText>
        <label>Confidence Meter</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>StageName</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>+3 Deal all but done</fullName>
                </value>
                <value>
                    <fullName>+2 On inside Track</fullName>
                </value>
                <value>
                    <fullName>+1 Competitive Advantage</fullName>
                </value>
                <value>
                    <fullName>-1 Competitive Disadvantage</fullName>
                </value>
                <value>
                    <fullName>-2 Severe Politics</fullName>
                </value>
                <value>
                    <fullName>-3 Deal all but lost</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contract_Letter_of_intent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Contract/Letter of Intent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Count_Product_Revenue__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Allows multiple opportunities for the same business without over counting the revenue in the pipeline. Typical use is in Automotive so that OEM and Tier One opportunities can both be tracked and included in DW Targets.</description>
        <inlineHelpText>Indicates if this revenue should be included in the pipeline. Unchecking Count Revenue is rare. For more information, see Multiparty Opportunity Management.</inlineHelpText>
        <label>Count ​Product Revenue</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Create_Date__c</fullName>
        <formula>DATEVALUE( CreatedDate )</formula>
        <label>Create Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Creation_Stage__c</fullName>
        <label>Creation Stage</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cross_Selling_by_Owner__c</fullName>
        <defaultValue>false</defaultValue>
        <description>1602 Production Request - SIR 719</description>
        <inlineHelpText>Cross Selling is defined as a design win that is entirely or partially made possible thru the synergies of the merged company&apos;s product and customer portfolio. Please check it when you feel the opportunity satisfies the definition above.</inlineHelpText>
        <label>Cross Selling</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Currency__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Currency</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>FX_Rates__c.CurrencyIsoCode</field>
                <operation>equals</operation>
                <valueField>$Source.CurrencyIsoCode</valueField>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>FX_Rates__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Customer_Category__c</fullName>
        <formula>TEXT(Account.Customer_Category__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_DRI__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Field specific to STAR Account - SIR1174</description>
        <label>Customer DRI</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.AccountId</field>
                <operation>equals</operation>
                <valueField>$Source.AccountId</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Customer_DRI_Contact</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DVT_Done__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Recommendation Milestone</description>
        <label>RECO - DVT Done</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DW_Evidence_Check_Box__c</fullName>
        <formula>IF( (Purchase_Order_Pre_Production_Order__c ||  
      Contract_Letter_of_intent__c  ||  
      Written_Confirmation_from_Customer__c) &amp;&amp;  numAtts__c &gt; 0 , 
IMAGE (&quot;/img/samples/flag_green.gif&quot;, &quot;GO&quot;) , 
IMAGE (&quot;/img/samples/flag_red.gif&quot;, &quot;STOP&quot;)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Design Win Evidence tick (V) and Attachment are mandatory for DW submission</inlineHelpText>
        <label>DW Evidence Check</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DW_Submission_Quarter__c</fullName>
        <inlineHelpText>Dynamic field which displays the quarter based on the DW Status, If DW Status = Pending, DW Quarter value is based on the DW Submission date, if DW Status = Approved, DW Quarter value is based on the DW Approval date.</inlineHelpText>
        <label>DW Quarter</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DW_to_Revenue_Rate__c</fullName>
        <formula>Account.Parent.DW_to_Revenue_Rate__c</formula>
        <label>DW to Revenue %</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Days_since_Created_Date__c</fullName>
        <formula>NOW() - CreatedDate</formula>
        <label>Days since Created Date</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_since_Last_Modified__c</fullName>
        <description>How many days has past since this record has been last modified</description>
        <formula>TODAY()  -  DATEVALUE( Last_Business_Modified_Date__c )</formula>
        <inlineHelpText>How many days has past since this record has been last modified</inlineHelpText>
        <label>Days since Last Modified</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Deci_Comm_Prob__c</fullName>
        <formula>Account.Parent.PROBABILITY_Decision__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Stores the probability of an opportuntiy reaching the Commitment stage for this parent account. Is applies to all opportunties upon creation or change of stage. Calculated yearly based on 2 years history.</inlineHelpText>
        <label>Deci Comm Probability</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Decision_Stage__c</fullName>
        <formula>IF( 
TEXT(StageName) = &apos;Decision&apos;, 
IMAGE (&quot;/img/samples/flag_green.gif&quot;, &quot;GO&quot;) , 
IMAGE (&quot;/img/samples/flag_red.gif&quot;, &quot;STOP&quot;) 
)</formula>
        <inlineHelpText>Salesforce Opportunity has to reach &quot;Decision&quot; Stage before submitting DW for approval</inlineHelpText>
        <label>Decision Stage</label>
        <type>Text</type>
    </fields>
</CustomObject>